Add Config Files

--- a/proxy/package.json
+++ b/proxy/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build:client": "yarn --cwd ../client build",
+    "client:prepare": "cd ../client && yarn && cd ../proxy",
+    "client:build": "yarn --cwd ../client build",
+    "build:ci": "yarn && yarn run client:prepare && yarn run client:build && yarn build && cd ../server && zip -r ../release.zip ./* && cd ..",
     "preview": "vite preview"
   },
   "devDependencies": {
