--- a/client/packages/openblocks/package.json
+++ b/client/packages/openblocks/package.json
@@ -66,7 +66,6 @@
     "react-draggable": "^4.4.4",
     "react-grid-layout": "^1.3.0",
     "react-helmet": "^6.1.0",
-    "react-hook-mask": "^1.1.18",
     "react-joyride": "^2.4.0",
     "react-json-view": "^1.21.3",
     "react-markdown": "^8.0.0",
@@ -96,6 +95,7 @@
     "toposort": "^2.0.2",
     "typescript-collections": "^1.3.3",
     "ua-parser-js": "^1.0.2",
+    "use-mask-input": "^3.3.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
     "weixin-js-sdk": "^1.6.0",
