--- a/client/packages/openblocks/package.json
+++ b/client/packages/openblocks/package.json
@@ -98,7 +98,7 @@
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
     "weixin-js-sdk": "^1.6.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "scripts": {
     "supportedBrowsers": "yarn dlx browserslist-useragent-regexp --allowHigherVersions '>0.2%,not dead,not op_mini all,chrome >=69'",
