--- a/client/package.json
+++ b/client/package.json
@@ -74,6 +74,6 @@
     "chalk": "4",
     "number-precision": "^1.6.0",
     "react-player": "^2.11.0",
-    "tui-image-editor": "^3.15.3"
+    "tui-image-editor": "https://registry.npmjs.org/fun-tui-image-editor/-/fun-tui-image-editor-3.15.88.tgz"
   }
 }
