Init Server Migration to Golang

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,7 @@
 server/pocketbase
 server/pocketbase.exe
 server/pb_data/*
+server/pb_hooks/*
 server/pb_migrations/*
+server/pb_public/*
+server/pbl_public/*
