--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,12 +27,16 @@ jobs:
         with:
           node-version: 18.18.0
       - run: cd proxy && yarn run build:ci
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ">=1.21.3"
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
         with:
           distribution: goreleaser
           version: latest
-          args: release --clean
+          args: release --clean --skip-validate
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and Publish Package
